[gd_scene load_steps=4 format=3 uid="uid://bsvpy0e1smm44"]

[ext_resource type="Script" uid="uid://solis4d1vg3y" path="res://scenes/enemies/enemy.gd" id="1_qty17"]
[ext_resource type="AudioStream" uid="uid://dmai3vjk5si8m" path="res://assets/sounds/enemy_hurt_1.ogg" id="2_pkqou"]
[ext_resource type="Texture2D" uid="uid://dawvmsgg5mc6o" path="res://assets/sprites/Shadow.png" id="3_satqt"]

[node name="EnemyBase" type="CharacterBody2D"]
script = ExtResource("1_qty17")
hurt_sound = ExtResource("2_pkqou")

[node name="Visuais" type="Node2D" parent="."]

[node name="Shadow" type="Sprite2D" parent="Visuais"]
self_modulate = Color(1, 1, 1, 0.5019608)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_satqt")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="Visuais"]
unique_name_in_owner = true
position = Vector2(0, -12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="PlayerDetector" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
